--- a/_config.yml
+++ b/_config.yml
@@ -4,20 +4,20 @@
 # baseurl is the website's URL without the hostname
 
 # If you are building a simple GitHub user page (http://username.github.io) then use these settings:
-url: "http://iancullings.github.io"
-baseurl: "iancullings"
+#url: "http://iancullings.github.io"
+#baseurl: "iancullings"
 
 # If you are building a GitHub project page then use these settings:
-#url: "http://username.github.io/projectname"
-#baseurl: "/projectname"
+url: "http://iancullings.github.io/blueprint2building"
+baseurl: "/blueprint2building"
 
 # Of course don't forget to change the username and projectname to YOUR username and project
 
 # Name of website
-title: Ian Cullings Website
+title: Blueprint2Building
 
 # Short description of your site
-description: A virtual proof that name is awesome!
+A project to make a difference for those without a home
 
 # --- Navigation bar options --- #
 
@@ -72,10 +72,10 @@ author:
 # If you want to add a new link that isn't here, you'll need to also edit the file _data/SocialNetworks.yml
 social-network-links:
   rss: true
-  email: "someone@example.com"
-  facebook: daattali
-  github: daattali
-  twitter: daattali
+  email: "idc25@cornell.edu"
+#  facebook: daattali
+#  github: daattali
+#  twitter: daattali
 #  reddit: yourname
 #  google-plus: +DeanAttali
 #  linkedin: daattali
@@ -99,7 +99,7 @@ share-links-active:
 
 # How to display the link to the website in the footer
 # Remove this if you don't want a link in the footer
-url-pretty: "MyWebsite.com"  # eg. "deanattali.com/beautiful-jekyll"
+#url-pretty: "MyWebsite.com"  # eg. "deanattali.com/beautiful-jekyll"
 
 # --- Web Statistics Section --- #
 
