Fix build error

--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ baseurl: "/blueprint2building"
 title: Blueprint2Building
 
 # Short description of your site
-A project to make a difference for those without a home
+description: A project to make a difference for those without a home
 
 # --- Navigation bar options --- #
 
