--- a/_config.yml
+++ b/_config.yml
@@ -25,9 +25,7 @@ description: A project to make a difference for those without a home
 navbar-links:
   About Me: "aboutme"
   Resources:
-    - Beautiful Jekyll: "http://deanattali.com/beautiful-jekyll/"
-    - Learn markdown: "http://www.markdowntutorial.com/"
-    - GitHub Pages: "https://pages.github.com/"
+    - Second Wind Cottages: "https://www.secondwindcottages.org/"
   Author's home: "http://deanattali.com"
 
 # Image to show in the navigation bar - image must be a square (width = height)
